practice file update

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>My name is md anwar Hossain</h1>
+    <p>This is a paragraph tag, it define for write paragraph in a website</p>
+    <a href="#">This is a anchor tag it use for a link</a>
 </body>
 </html>
