practice file update

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>My name is md anwar Hossain</h1>
     <p>This is a paragraph tag, it define for write paragraph in a website</p>
     <a href="#">This is a anchor tag it use for a link</a>
+    <span>this is a span tag</span>
+    <strong>this is a strong tag</strong>
 </body>
 </html>
