practice file update

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <a href="#">This is a anchor tag it use for a link</a>
     <span>this is a span tag</span>
     <strong>this is a strong tag</strong>
+    <b>this is a bold tag</b>
+    <section>this is a section tag</section>
+    <div>this is a div tag</div>
+    <form action="#">this is a form tag</form>
 </body>
 </html>
