practice file update

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <section>this is a section tag</section>
     <div>this is a div tag</div>
     <form action="#">this is a form tag</form>
+    <form action="#">
+        <fieldset>This is a fieldset</fieldset>
+        <dialog>this is a dialog tag</dialog>
+        <caption>this is a caption tag</caption>
+    </form>
 </body>
 </html>
